[package]
name = "ecdsa-mpc"
version = "0.3.0"
license = "MIT"
authors = [
    "Victor Ermolaev <victor.ermolaev@ing.com>",
    "Oleg Burundukov <oleg.burundukov@ing.com>",
]
edition = "2018"
description = "Implementation of the threshold ECDSA in secure multiparty setup"
homepage = "https://www.ing.com/"
keywords =    [
    "ecdsa",
    "cryptography",
    "MPC",
    "bitcoin",
    "ethereum",
    "cryptocurrency"
    ]

[dependencies]
serde = { version = "1.0.102", features = ["derive"] }
hex = "0.4.0"
log = "0.4.8"
env_logger = "0.7.1"
sha2 = "0.9"
sodiumoxide = "0.2.5"
curv = { package="curv-kzen" , features = ["rust-gmp-kzen"], version="0.8.3" }

# the following crate should be pulled from the fork where its dependency on the `curv' library is upgraded
paillier = { package ="kzen-paillier" , tag= "v0.4.1",  git = "https://github.com/KZen-networks/rust-paillier" }
rand = "0.7.3"
strum = "0.18.0"
strum_macros = "0.18.0"
futures = "0.3.1"
tokio = { version = "0.3.4", features = ["time", "rt-multi-thread", "macros"] }
tokio-util = { version = "0.3.1", features = ["codec"] }
trace = { version = "0.3.1",  git = "https://github.com/vnermolaev/trace.git" }
crossbeam-channel = "0.4.0"
serde_json = "1.0.42"
zeroize = { version="1.4.2", features = ["zeroize_derive"] }
thiserror = "1.0.24"
anyhow = "1.0.38"

#[dependencies.paillier]
#git = "https://github.com/KZen-networks/rust-paillier"
#tag = "0.4.1"
#default-features = false

[package.metadata.docs.rs]
rustdoc-args = [
    "--html-in-header",
    "katex.html",
]
